# gyro-accel_motiontracking

desktop_application/: CMakeLists.txt
desktop_application/cmake/: FindGLFW3.cmake
desktop_application/include/: camera.hpp  controls.hpp  graphics.hpp  model.hpp  model_cube.hpp  shader.hpp
desktop_application/resources/shaders/: SimpleFragmentShader.fragmentshader  SimpleVertexShader.vertexshader
desktop_application/src/: CMakeLists.txt  camera.cpp  controls.cpp  graphics.cpp  main.cpp  model.cpp  model_cube.cpp  shader.cpp
device/aavrlib/: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE_HEADER  README.md  TODO  ldscript.ld
device/aavrlib/cmake/: uninstall.cmake.in
device/aavrlib/cmake/toolchain/: Toolchain-avr.cmake
device/aavrlib/include/: common.h  config.h  ioport.h  softPWM_long.h  softPWM_short.h  systick.h  time.h
device/aavrlib/include/boards/: arduinoUNO.h
device/aavrlib/include/peripherals/: 1602A.h  HCSR04.h  MPU60X0.h  infrared.h
device/aavrlib/include/uc/: analog.h  interrupt.h  spi.h  system.h  timers.h  twi.h  usart.h
device/aavrlib/scripts/: load_program.sh  setup_travis.sh
device/aavrlib/src/: CMakeLists.txt  softPWM_long.c  softPWM_short.c  systick.c  time.c
device/aavrlib/src/peripherals/: 1602A.c  CMakeLists.txt  HCSR04.c  MPU60X0.c  infrared.c
device/aavrlib/src/uc/: CMakeLists.txt  analog.c  interrupt.S  interrupt.c  spi.c  system.c  timers.c  twi.c  usart.c
device/aavrlib/test/: CMakeLists.txt  test_HC-SR04.c  test_analog.c  test_avrcar.c  test_infrared.c  test_lcd_1602a.c  test_micros_bug.c  test_mpu6050_calib.c  test_mpu6050_datagather.c  test_pwm.c  test_softPWM_long.c  test_softPWM_short.c  test_spi_block.c  test_spi_burst.c  test_systick.c  test_voltage_ctrl.c
